nivasa-macros/tests/trybuild/schedule_timeout_invalid_literal.rs
use nivasa_macros::timeout;

struct Jobs;

impl Jobs {
    #[timeout("soon")]
    fn tick(&self) {}
}

fn main() {}
